--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
         "koa-bodyparser": "^4.2.1",
         "koa-router": "^7.4.0",
         "mongodb": "^3.2.6",
-        "mongoose": "^5.5.11"
+        "mongoose": "^5.5.11",
+        "bcryptjs": "^2.4.3"
     }
 }
