--- a/web/package.json
+++ b/web/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "highlight.js": "^9.15.9",
+    "lodash": "^4.17.15",
+    "marked": "^0.7.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
-    "vuex": "^3.1.1",
-    "axios": "^0.19.0"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
