--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "compression-webpack-plugin": "^3.0.0",
     "core-js": "^2.6.5",
     "highlight.js": "^9.15.9",
     "lodash": "^4.17.15",
