--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "koa-jwt": "^3.6.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "koa2-cors": "^2.0.6",
     "mongodb": "^3.2.6",
     "mongoose": "^5.5.11"
   }
