--- a/web/package.json
+++ b/web/package.json
@@ -1,57 +1,58 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve --mode dev",
-    "build": "vue-cli-service build --mode prod",
-    "test": "vue-cli-service build --mode test",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "axios": "^0.19.0",
-    "compression-webpack-plugin": "^3.0.0",
-    "core-js": "^2.6.5",
-    "highlight.js": "^9.15.9",
-    "lodash": "^4.17.15",
-    "marked": "^0.7.0",
-    "vue": "^2.6.10",
-    "vue-lazyload": "^1.3.3",
-    "vue-router": "^3.0.7",
-    "vuex": "^3.1.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.10.0",
-    "@vue/cli-plugin-eslint": "^3.10.0",
-    "@vue/cli-service": "^3.10.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
+    "name": "web",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve --mode dev",
+        "build": "vue-cli-service build --mode prod --report",
+        "test": "vue-cli-service build --mode test",
+        "lint": "vue-cli-service lint"
     },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+    "dependencies": {
+        "axios": "^0.19.0",
+        "compression-webpack-plugin": "^3.0.0",
+        "core-js": "^2.6.5",
+        "highlight.js": "^9.15.9",
+        "lodash": "^4.17.15",
+        "marked": "^0.7.0",
+        "vue": "^2.6.10",
+        "vue-lazyload": "^1.3.3",
+        "vue-router": "^3.0.7",
+        "vuex": "^3.1.1"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "^3.10.0",
+        "@vue/cli-plugin-eslint": "^3.10.0",
+        "@vue/cli-service": "^3.10.0",
+        "babel-eslint": "^10.0.1",
+        "eslint": "^5.16.0",
+        "eslint-plugin-vue": "^5.0.0",
+        "node-sass": "^4.12.0",
+        "sass-loader": "^7.1.0",
+        "vue-template-compiler": "^2.6.10",
+        "webpack-bundle-analyzer": "^3.5.0"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "rules": {},
+        "parserOptions": {
+            "parser": "babel-eslint"
+        }
+    },
+    "postcss": {
+        "plugins": {
+            "autoprefixer": {}
+        }
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions"
+    ]
 }
