--- a/web/package.json
+++ b/web/package.json
@@ -12,11 +12,12 @@
         "axios": "^0.19.0",
         "compression-webpack-plugin": "^3.0.0",
         "core-js": "^2.6.5",
+        "element-ui": "^2.13.0",
         "highlight.js": "^9.15.9",
         "lodash": "^4.17.15",
         "marked": "^0.7.0",
         "vue": "^2.6.10",
-        "vue-router": "^3.0.7",
+        "vue-router": "^3.1.3",
         "vuex": "^3.1.1"
     },
     "devDependencies": {
