--- a/web/package.json
+++ b/web/package.json
@@ -12,11 +12,14 @@
         "axios": "^0.19.0",
         "compression-webpack-plugin": "^3.0.0",
         "core-js": "^2.6.5",
+        "editor.md": "^1.5.0",
         "element-ui": "^2.13.0",
         "highlight.js": "^9.15.9",
+        "jquery": "^3.4.1",
         "lodash": "^4.17.15",
         "marked": "^0.7.0",
         "vue": "^2.6.10",
+        "vue-md-editor": "^1.3.3",
         "vue-router": "^3.1.3",
         "vuex": "^3.1.1"
     },
