--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "serve": "nodemon app.js"
+        "serve": "nodemon app.js",
+        "start": "nodemon app.js --exec babel-node"
     },
     "keywords": [],
     "author": "",
@@ -25,5 +26,13 @@
         "mongodb": "^3.2.6",
         "mongoose": "^5.5.11",
         "multer": "^1.4.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.9.0",
+        "@babel/node": "^7.8.7",
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/plugin-proposal-decorators": "^7.8.3",
+        "@babel/preset-env": "^7.9.5",
+        "@babel/register": "^7.9.0"
     }
 }
