--- a/web/package.json
+++ b/web/package.json
@@ -30,12 +30,13 @@
         "babel-eslint": "^10.0.1",
         "eslint": "^5.16.0",
         "eslint-plugin-vue": "^5.0.0",
+        "happypack": "^2.0.5",
+        "html-webpack-externals-plugin": "^3.8.0",
         "node-sass": "^4.12.0",
         "sass-loader": "^7.1.0",
-        "vue-template-compiler": "^2.6.10",
-        "webpack-bundle-analyzer": "^3.5.0",
         "terser-webpack-plugin": "^2.1.0",
-        "happypack": "^2.0.5"
+        "vue-template-compiler": "^2.6.10",
+        "webpack-bundle-analyzer": "^3.5.0"
     },
     "eslintConfig": {
         "root": true,
